--- a/index.html
+++ b/index.html
@@ -1,16 +1,124 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minimalist Dashboard</title>
     <link href="./src/output.css" rel="stylesheet">
+    <style>
+        /* Glassmorphism effect */
+        .glass {
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            border-radius: 12px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+    </style>
 </head>
 
-<body>
-    <h1 class="text-3xl font-bold underline">
-        Hello world!
-    </h1>
+<body class="bg-[#121212] text-gray-200 flex min-h-screen">
+
+    <!-- Sidebar -->
+    <aside class="w-64 p-6 bg-black flex flex-col justify-between h-screen">
+        <div>
+            <h1 class="text-3xl font-semibold text-white">Dashboard</h1>
+            <nav class="mt-6 space-y-4">
+                <a href="#" class="block text-gray-400 hover:text-white transition">Home</a>
+                <a href="#" class="block text-gray-400 hover:text-white transition">Analytics</a>
+                <a href="#" class="block text-gray-400 hover:text-white transition">Music</a>
+                <a href="#" class="block text-gray-400 hover:text-white transition">About Us</a>
+            </nav>
+        </div>
+
+        <!-- Clock Widget at the Bottom -->
+        <div class="mt-auto p-6 glass text-center">
+            <h3 class="text-lg text-gray-400">Time</h3>
+            <p id="clock" class="text-2xl font-bold text-white"></p>
+        </div>
+    </aside>
+
+
+    <!-- Main Content -->
+    <main class="flex-1 p-10">
+        <h2 class="text-4xl font-bold">Welcome Back</h2>
+
+        <!-- Search Bar with Flowbite Dropdown -->
+        <form class="max-w-lg">
+            <div class="flex mt-6 items-center max-w-lg w-full bg-[#1E1E1E] rounded-lg overflow-hidden">
+                <label for="search-dropdown" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Your
+                    Email</label>
+                <button id="dropdown-button" data-dropdown-toggle="dropdown"
+                    class="shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-s-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600"
+                    type="button">Google <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="m1 1 4 4 4-4" />
+                    </svg></button>
+                <div id="dropdown"
+                    class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-26 dark:bg-gray-700">
+                    <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdown-button"
+                        id="search-options">
+                        <li>
+                            <a data-engine="google" class="dropdown-item inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600
+                                dark:hover:text-white">Google</a>
+                        </li>
+                        <li>
+                            <a data-engine="bing" class="dropdown-item inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600
+                                dark:hover:text-white">Bing</a>
+                        </li>
+                        <li>
+                            <a data-engine="duckduckgo" class="dropdown-item inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600
+                                dark:hover:text-white">DDG</a>
+                        </li>
+                        <li>
+                            <a data-engine="youtube" class="dropdown-item inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600
+                                dark:hover:text-white">YouTube</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="relative w-full">
+                    <input type="text" id="search-input"
+                        class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-e-lg border-s-gray-50 border-s-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-s-gray-700  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500"
+                        placeholder="Search..." required />
+                    <button onclick="performSearch()"
+                        class="absolute top-0 end-0 p-2.5 text-sm font-medium h-full text-white bg-blue-700 rounded-e-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                        <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 20 20">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                        </svg>
+                        <span class="sr-only">Search</span>
+                    </button>
+                </div>
+            </div>
+        </form>
+
+
+        <!-- Widgets -->
+        <div class="grid grid-cols-3 gap-6 mt-8">
+            <a href="https://www.youtube.com/"
+                class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                <h5 class="mb-2 text-2xl text-center font-bold tracking-tight text-gray-900 dark:text-white">Youtube
+                </h5>
+            </a>
+            <a href="https://github.com/YOLO-GIT"
+                class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                <h5 class="mb-2 text-2xl text-center font-bold tracking-tight text-gray-900 dark:text-white">GitHub
+                    (YOLO-GIT)
+                </h5>
+            </a>
+            <a href="https://leetcode.com/YOLO_1/"
+                class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                <h5 class="mb-2 text-2xl text-center font-bold tracking-tight text-gray-900 dark:text-white">LeetCode
+                </h5>
+            </a>
+        </div>
+    </main>
+
+    <script src="./script/clock.js"></script>
+    <script src="./script/handle_search.js"></script>
+    <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
 </body>
 
 </html>
