--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="bg-[#121212] text-gray-200 flex min-h-screen">
 
     <!-- Sidebar -->
-    <aside class="w-64 p-6 bg-black flex flex-col justify-between h-screen">
+    <aside class="w-64 p-6 bg-black flex flex-col justify-between min-h-screen">
         <div>
             <h1 class="text-3xl font-semibold text-white">Dashboard</h1>
             <nav class="mt-6 space-y-4">
@@ -38,10 +38,9 @@
         </div>
     </aside>
 
-
     <!-- Main Content -->
     <main class="flex-1 p-10">
-        <h2 class="text-4xl font-bold">Welcome Back</h2>
+        <h2 id="greeting" class="text-3xl font-bold text-white neon-text"></h2>
 
         <!-- Search Bar with Flowbite Dropdown -->
         <form class="max-w-lg">
@@ -97,27 +96,76 @@
 
         <!-- Widgets -->
         <div class="grid grid-cols-3 gap-6 mt-8">
-            <a href="https://www.youtube.com/"
-                class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-                <h5 class="mb-2 text-2xl text-center font-bold tracking-tight text-gray-900 dark:text-white">Youtube
-                </h5>
+            <!-- YouTube -->
+            <a href="https://www.youtube.com/" class="widget group hover:bg-red-100 hover:shadow-red-500">
+                <img src="./assets/youtube.svg" alt="YouTube" class="widget-icon">
+                <h5 class="widget-text">YouTube</h5>
             </a>
-            <a href="https://github.com/YOLO-GIT"
-                class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-                <h5 class="mb-2 text-2xl text-center font-bold tracking-tight text-gray-900 dark:text-white">GitHub
-                    (YOLO-GIT)
-                </h5>
+
+            <!-- GitHub -->
+            <a href="https://github.com/YOLO-GIT" class="widget group hover:bg-gray-100 hover:shadow-gray-500">
+                <img src="./assets/github.svg" alt="GitHub" class="widget-icon">
+                <h5 class="widget-text">GitHub</h5>
             </a>
-            <a href="https://leetcode.com/YOLO_1/"
-                class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-                <h5 class="mb-2 text-2xl text-center font-bold tracking-tight text-gray-900 dark:text-white">LeetCode
-                </h5>
+
+            <!-- LeetCode -->
+            <a href="https://leetcode.com/YOLO_1/" class="widget group hover:bg-yellow-100 hover:shadow-yellow-500">
+                <img src="./assets/leetcode.svg" alt="LeetCode" class="widget-icon">
+                <h5 class="widget-text">LeetCode</h5>
+            </a>
+
+            <!-- Telegram -->
+            <a href="https://web.telegram.org/" class="widget group hover:bg-blue-100 hover:shadow-blue-500">
+                <img src="./assets/telegram.svg" alt="Telegram" class="widget-icon">
+                <h5 class="widget-text">Telegram</h5>
+            </a>
+
+            <!-- Twitter -->
+            <a href="https://twitter.com/?lang=en-my" class="widget group hover:bg-blue-100 hover:shadow-blue-400">
+                <img src="./assets/twitter.svg" alt="Twitter" class="widget-icon">
+                <h5 class="widget-text">Twitter</h5>
+            </a>
+
+            <!-- TikTok -->
+            <a href="https://www.tiktok.com/" class="widget group hover:bg-gray-100 hover:shadow-purple-500">
+                <img src="./assets/tiktok.svg" alt="TikTok" class="widget-icon">
+                <h5 class="widget-text">TikTok</h5>
+            </a>
+
+            <!-- WhatsApp -->
+            <a href="https://web.whatsapp.com/" class="widget group hover:bg-green-100 hover:shadow-green-500">
+                <img src="./assets/whatsapp.svg" alt="WhatsApp" class="widget-icon">
+                <h5 class="widget-text">WhatsApp</h5>
+            </a>
+
+            <!-- OSi UniMAP -->
+            <a href="https://osi.unimap.edu.my/OSI_V2/login.jsp"
+                class="widget group hover:bg-gray-100 hover:shadow-cyan-500">
+                <svg class="widget-icon" data-slot="icon" fill="none" stroke-width="1.5" stroke="currentColor"
+                    viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.62 48.62 0 0 1 12 20.904a48.62 48.62 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.636 50.636 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.903 59.903 0 0 1 10.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.717 50.717 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5">
+                    </path>
+                </svg>
+                <h5 class="widget-text">OSi UniMAP</h5>
+            </a>
+
+            <!-- Web Archive -->
+            <a href="#" class="widget group hover:bg-gray-100 hover:shadow-orange-500">
+                <svg class="widget-icon" data-slot="icon" fill="none" stroke-width="1.5" stroke="currentColor"
+                    viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="m20.25 7.5-.625 10.632a2.25 2.25 0 0 1-2.247 2.118H6.622a2.25 2.25 0 0 1-2.247-2.118L3.75 7.5M10 11.25h4M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125Z">
+                    </path>
+                </svg>
+                <h5 class="widget-text">Web Archive</h5>
             </a>
         </div>
     </main>
 
     <script src="./script/clock.js"></script>
     <script src="./script/handle_search.js"></script>
+    <script src="./script/greeting.js"></script>
     <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
 </body>
 
