Finish the Home Part

--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimalist Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="./assets/Kirbo.png" />
+    <title>Startup</title>
     <link href="./src/output.css" rel="stylesheet">
-    <style>
-        /* Glassmorphism effect */
-        .glass {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(10px);
-            border-radius: 12px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-    </style>
 </head>
 
 <body class="bg-[#121212] text-gray-200 flex min-h-screen">
@@ -25,9 +17,8 @@
             <h1 class="text-3xl font-semibold text-white">Dashboard</h1>
             <nav class="mt-6 space-y-4">
                 <a href="#" class="block text-gray-400 hover:text-white transition">Home</a>
-                <a href="#" class="block text-gray-400 hover:text-white transition">Analytics</a>
-                <a href="#" class="block text-gray-400 hover:text-white transition">Music</a>
-                <a href="#" class="block text-gray-400 hover:text-white transition">About Us</a>
+                <a href="#" class="block text-gray-400 hover:text-white transition">Coming Soon</a>
+                <a href="#" class="block text-gray-400 hover:text-white transition">Coming Soon</a>
             </nav>
         </div>
 
